2011-05-19  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/cdt/autotools/tests/editors/AutomakeColourizationTests.java (setUp): Perform
	any editor or active page manipulation within Display thread.
	* src/org/eclipse/linuxtools/cdt/autotools/tests/editors/AutomakeTextHoverTest.java (setUp): Ditto.
	(testGetHoverForMacro2): Ditto.
	(testGetHoverForMacro1): Ditto.
	(testGetHoverInfoForTargetDependencies): Ditto.
	(testGetHoverInfoForTargetDependency): Ditto.
	(testGetHoverInfoTargetName2): Ditto.
	(testGetHoverInfoTargetName1): Ditto.
	* src/org/eclipse/linuxtools/cdt/autotools/tests/editors/AutomakeEditorTests.java (testAutomakeEditorAssociation): Ditto.

2010-11-18  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/cdt/autotools/tests/ProjectTools.java (createProject): Try creating a project
	description and then creating a CDT project from the initial handle.  Use that handle to
	convert to an Autotools Project.  This is being done to try and remove the current random
	bug under Hudson builds.

2010-05-10  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/cdt/autotools/tests/AutotoolsTestsPlugin.java: Fix plugin id.
	(AutotoolsTestsPlugin): Remove setting of plugin. 
	(start): Add setting of plugin here.

2010-03-12  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/cdt/autotools/tests/ProjectTools.java (setConfigDir): Fix up how
	configuration is allocated.  Use id instead of name.

2009-11-13  Jeff Johnston  <jjohnstn@redhat.com>

	* META-INF/MANIFEST.MF: Make singleton.

2009-11-03  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/cdt/autotools/tests/ProjectTools.java: Remove warnings.

2009-10-15  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/cdt/autotools/tests/AutotoolsProjectTest0.java (testAutotoolsProject0): Fix to
	handle fact that default build directory is now project directory.